# start_robocup

./: CMakeLists.txt  README.md  package.xml
behavior_tree_xml/: bt_nav.xml  bt_recepcionist.xml  patrolling.xml
include/bt_nodes/: Look4guest.hpp
include/navigation/br2_bt_patrolling/: GetWaypoint.hpp  Move.hpp
include/perception_asr/: DarknetDetectionNode.hpp  DetectionTo3DfromDepthNode.hpp
include/tf2_detector/: PersonDetectorImprovedNode.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/start_robocup/include/navigation/br2_bt_patrolling/: GetWaypoint.hpp  Move.hpp
install/start_robocup/include/navigation/br2_bt_patrolling/ctrl_support/: BTActionNode.hpp  BTLifecycleCtrlNode.hpp
install/start_robocup/include/perception_asr/: DarknetDetectionNode.hpp  DetectionTo3DfromDepthNode.hpp
install/start_robocup/include/tf2_detector/: PersonDetectorImprovedNode.hpp
install/start_robocup/lib/start_robocup/: patrolling_main
install/start_robocup/share/ament_index/resource_index/package_run_dependencies/: start_robocup
install/start_robocup/share/ament_index/resource_index/parent_prefix_path/: start_robocup
install/start_robocup/share/start_robocup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/start_robocup/share/start_robocup/behavior_tree_xml/: patrolling.xml
install/start_robocup/share/start_robocup/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  start_robocupConfig-version.cmake  start_robocupConfig.cmake
install/start_robocup/share/start_robocup/environment/: ament_prefix_path.dsv  path.dsv
install/start_robocup/share/start_robocup/launch/: patrolling.launch.py
launch/: patrolling.launch.py
log/: latest_build
maps/: robocup.pgm  robocup.yaml
src/bt_nodes/: Look4guest.cpp
src/navigation/br2_bt_patrolling/: GetWaypoint.cpp  Move.cpp
src/perception_asr/: DarknetDetectionNode.cpp  DetectionTo3DfromDepthNode.cpp
src/tf2_detector/: PersonDetectorImprovedNode.cpp
