<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seekandcapture_cibernots</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fmrico@gmail.com">fmrico</maintainer>
  <license>Apache License, Version 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>image_geometry</depend>
  <depend>depth_image_proc</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libzmq3-dev</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

